tests/NormalTests/paczka1/fuzzy1/72595702.err
Error in line 8: A611 S629 18,4
Error in line 13: 4LHT S26 83,0
Error in line 10: jJtGH1t7y S737 71,0
Error in line 18: edaizVsR9V S629 96,7
Error in line 20: edaizVsR9V S737 35,0
Error in line 27: jJtGH1t7y S629 13,5
Error in line 22: rWjx A611 22,1
Error in line 28: jJtGH1t7y S26 25,4
Error in line 34: Hrpj S26 76,0
